# ExpozitieDeArta

./: CMakeLists.txt  Expozitie.h  Invitat.h  Pictura.h  RepoT.h  ServiceInvitat.h  ServicePictura.h  TestRepoTPictura.h  TestsRepoTInvitat.h  TestsServiceInvitat.h  TestsServicePictura.h  UI.h  main.cpp
